docker setup working, variadic functions

--- a/composite-types/Dockerfile
+++ b/composite-types/Dockerfile
@@ -11,4 +11,4 @@ LABEL maintainer="andrew@jarombek.com" \
 WORKDIR src
 COPY . .
 
-ENTRYPOINT ["go", "test", "."]
+ENTRYPOINT ["go", "test", "-v", "."]
