--- a/go-tool/Dockerfile
+++ b/go-tool/Dockerfile
@@ -1,12 +1,12 @@
-# Dockerfile for running the advanced-concurrency program on Alpine Linux using Go 1.18
+# Dockerfile for running the go-tool program on Alpine Linux using Go 1.18
 # Author: Andrew Jarombek
-# Date: 7/24/2022
+# Date: 8/4/2022
 
 FROM ajarombek/go-alpine-linux-programming:latest
 
 LABEL maintainer="andrew@jarombek.com" \
       version="1.0.0" \
-      description="Dockerfile for running the advanced-concurrency program on Alpine Linux using Go 1.18"
+      description="Dockerfile for running the go-tool program on Alpine Linux using Go 1.18"
 
 WORKDIR src
 COPY . .
