unit testing examples

--- a/unit-testing/Dockerfile
+++ b/unit-testing/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile for running the methods program on Alpine Linux using Go 1.18
+# Dockerfile for running the unit testing program on Alpine Linux using Go 1.18
 # Author: Andrew Jarombek
 # Date: 8/8/2022
 
@@ -6,9 +6,10 @@ FROM ajarombek/go-alpine-linux-programming:latest
 
 LABEL maintainer="andrew@jarombek.com" \
       version="1.0.0" \
-      description="Dockerfile for running the unit-testing program on Alpine Linux using Go 1.18"
+      description="Dockerfile for running the unit testing program on Alpine Linux using Go 1.18"
 
 WORKDIR src
 COPY . .
 
-ENTRYPOINT ["go", "test", "-v", "."]
+CMD ["-c", ". ./run.sh"]
+ENTRYPOINT ["/bin/sh"]
