more plz build setup for tests with dependencies

--- a/unit-testing/BUILD
+++ b/unit-testing/BUILD
@@ -16,4 +16,8 @@ go_test(
         ":license_plates",
         "//:go_download",
     ],
+    labels = [
+        "unit_testing",
+        "test",
+    ],
 )
