--- a/goroutines/BUILD
+++ b/goroutines/BUILD
@@ -1,30 +1,27 @@
-# Please Build file for the advanced_concurrency Go module.
+# Please Build file for the goroutines Go module.
 # Author: Andrew Jarombek
-# Date: 9/17/2022
+# Date: 9/18/2022
 
 filegroup(
     name = "test_files",
     srcs = glob(["*.go"]),
 )
 
+filegroup(
+    name = "data_files",
+    srcs = glob(["*.json"]),
+)
+
 go_test(
     name = "test",
     srcs = [":test_files"],
+    data = [":data_files"],
     deps = [
         "//:go_download",
         "//:testify",
     ],
     labels = [
-        "advanced_concurrency",
+        "goroutines",
         "test"
-    ],
-)
-
-sh_binary(
-    name = "go_run",
-    srcs = ["run.sh"],
-    labels = [
-       "advanced_concurrency",
-       "shell"
     ],
 )
