--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -8,6 +8,11 @@ LABEL maintainer="andrew@jarombek.com" \
       version="1.0.0" \
       description="Dockerfile for Go programming on Alpine Linux"
 
-RUN apk add gcc libc-dev linux-headers
+RUN apk add gcc libc-dev linux-headers curl bash
+
+RUN curl https://get.please.build > please.sh && \
+    bash ./please.sh
+
+ENV PATH="${PATH}:/root/.please/bin"
 
 STOPSIGNAL SIGTERM
