--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
       - run: echo "Checked out branch '${{ github.ref }}' of the ${{ github.repository }} repository"
 
       - name: Files installed from repository
-        run: ls ${{ github.workspace }}
+        run: ls -ltra
 
       - name: Run Go tests using Please Build
         run: plz test //... -i test -vvv
