--- a/.github/workflows/go_tests.yml
+++ b/.github/workflows/go_tests.yml
@@ -2,18 +2,21 @@
 # Author: Andrew Jarombek
 # Date: 9/21/2022
 
-name: Test
+name: Go Tests
 
 on:
   push:
-    branches: ["main"]
+    branches: ["main", "feature/*"]
   pull_request:
     branches: ["main"]
+
+  schedule:
+    - cron: "0 5 * * 1,3,5"
 
   workflow_dispatch:
 
 jobs:
-  test_go:
+  go_tests:
     runs-on: ubuntu-latest
     container: ajarombek/go-alpine-linux-programming:latest
     steps:
@@ -25,7 +28,7 @@ jobs:
       - run: echo "Checked out branch '${{ github.ref }}' of the ${{ github.repository }} repository"
 
       - name: Files installed from repository
-        run: ls -ltr ${{ github.workspace }}
+        run: ls -ltra
 
       - name: Run Go tests using Please Build
         run: plz test //... -i test -vvv
