--- a/reflection/BUILD
+++ b/reflection/BUILD
@@ -2,12 +2,14 @@
 # Author: Andrew Jarombek
 # Date: 9/17/2022
 
+filegroup(
+    name = "test_files",
+    srcs = glob(["*.go"]),
+)
+
 go_test(
     name = "test",
-    srcs = [
-        "basics_test.go",
-        "map_test.go"
-    ],
+    srcs = [":test_files"],
     deps = [
         "//:go_download",
         "//:testify",
