--- a/unit-testing/BUILD
+++ b/unit-testing/BUILD
@@ -12,10 +12,7 @@ go_library(
 go_test(
     name = "test",
     srcs = ["license_plates_test.go"],
-    deps = [
-        ":license_plates",
-        "//:go_download",
-    ],
+    deps = [":license_plates"],
     labels = [
         "unit_testing",
         "test",
