--- a/.github/workflows/go_tests.yml
+++ b/.github/workflows/go_tests.yml
@@ -6,12 +6,9 @@ name: Go Tests
 
 on:
   push:
-    branches: ["main", "feature/*"]
+    branches: ["main"]
   pull_request:
     branches: ["main"]
-
-  schedule:
-    - cron: "0 5 * * 5"
 
   workflow_dispatch:
 
