--- a/.github/workflows/go_tests.yml
+++ b/.github/workflows/go_tests.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   go_tests:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     container: ajarombek/go-alpine-linux-programming:latest
     steps:
       - run: echo "Job running on a ${{ runner.os }} server"
